@@ -56,7 +56,8 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
     }
 
     //IBM JDK adds a bunch of environment variables that make the foreground daemon not match
-    @Requires(TestPrecondition.NOT_JDK_IBM)
+    //Java 9 and above needs --add-opens to make environment variable mutation work
+    @Requires([TestPrecondition.NOT_JDK_IBM, TestPrecondition.JDK8_OR_EARLIER])
     def "should capture basic data when a foreground daemon runs multiple builds"() {
         given:
         buildFile << """
